--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Landing Page</title>
 
     <!-- Additional CSS Files -->
-
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico (2).png">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
